# CppCI-CD

./: docker-compose.yml
ci-cd-test/: CMakeLists.txt  Jenkinsfile
ci-cd-test/src/: main.cpp
ci-cd-test/test/: test_math.cpp
